scenario3/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: scenario3-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
