scenario3/ingress3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test-path
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
